--- a/src/hotelcasestudy/USER_descriptionroom.form
+++ b/src/hotelcasestudy/USER_descriptionroom.form
@@ -760,7 +760,7 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="25" green="40" red="67" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="are comparable to a small luxury house, all"/>
+                <Property name="text" type="java.lang.String" value="are comparable to a modest luxury"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -780,7 +780,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="20" y="540" width="270" height="20"/>
+                  <AbsoluteConstraints x="20" y="550" width="270" height="20"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -827,11 +827,11 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="25" green="40" red="67" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="yours for however long you wish to stay!"/>
+                <Property name="text" type="java.lang.String" value="to stay!"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="20" y="340" width="270" height="-1"/>
+                  <AbsoluteConstraints x="20" y="360" width="270" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -847,7 +847,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="20" y="420" width="270" height="20"/>
+                  <AbsoluteConstraints x="20" y="430" width="270" height="20"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -863,7 +863,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="20" y="460" width="270" height="20"/>
+                  <AbsoluteConstraints x="20" y="470" width="270" height="20"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -879,7 +879,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="20" y="380" width="270" height="20"/>
+                  <AbsoluteConstraints x="20" y="390" width="270" height="20"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -911,7 +911,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="20" y="400" width="270" height="20"/>
+                  <AbsoluteConstraints x="20" y="410" width="270" height="20"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -927,7 +927,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="20" y="480" width="270" height="20"/>
+                  <AbsoluteConstraints x="20" y="490" width="270" height="20"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -943,7 +943,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="20" y="500" width="270" height="20"/>
+                  <AbsoluteConstraints x="20" y="510" width="270" height="20"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -959,7 +959,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="20" y="520" width="270" height="20"/>
+                  <AbsoluteConstraints x="20" y="530" width="270" height="20"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -979,6 +979,22 @@
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
                   <AbsoluteConstraints x="20" y="250" width="-1" height="-1"/>
+                </Constraint>
+              </Constraints>
+            </Component>
+            <Component class="javax.swing.JLabel" name="jLabel44">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Liberation Sans" size="14" style="0"/>
+                </Property>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="25" green="40" red="67" type="rgb"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="house, all yours for however long you wish"/>
+              </Properties>
+              <Constraints>
+                <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+                  <AbsoluteConstraints x="20" y="340" width="270" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
